Fix clipping on the bottom of the text

--- a/fluffy/static/scss/upload-history.scss
+++ b/fluffy/static/scss/upload-history.scss
@@ -83,6 +83,7 @@
                                 overflow: hidden;
                                 margin-bottom: 10px;
                                 font-size: 14px;
+                                line-height: 1.2em;
                                 padding-top: 6px;
                             }
 
